// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskRunner Constructor throwsErrorOnInvalidParallelism 1`] = `"Invalid parallelism value of 'tequila', expected a number or 'max'"`;

exports[`TaskRunner Error logging printedStderrAfterError 1`] = `"An error occurred."`;

exports[`TaskRunner Error logging printedStderrAfterError 2`] = `
Array [
  Object {
    "kind": "O",
    "text": "Selected 1 project:
",
  },
  Object {
    "kind": "O",
    "text": "  stdout+stderr
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Executing a maximum of 1 simultaneous processes...
",
  },
  Object {
    "kind": "O",
    "text": "
[gray]==[[default] [cyan]stdout+stderr[default] [gray]]================================================[[default] [white]1 of 1[default] [gray]]==[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Build step 1

",
  },
  Object {
    "kind": "E",
    "text": "Error: step 1 failed

",
  },
  Object {
    "kind": "E",
    "text": "[red]\\"stdout+stderr\\" failed to build.[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "[gray]==[[default] [red]FAILURE: 1 project[default] [gray]]=======================================================[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "[gray]--[[default] [red]FAILURE: stdout+stderr[default] [gray]]---------------------------------[[default] [white]0.10 seconds[default] [gray]]--[default]

",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "E",
    "text": "[red]Projects failed to build.[default]

",
  },
]
`;

exports[`TaskRunner Error logging printedStdoutAfterErrorWithEmptyStderr 1`] = `"An error occurred."`;

exports[`TaskRunner Error logging printedStdoutAfterErrorWithEmptyStderr 2`] = `
Array [
  Object {
    "kind": "O",
    "text": "Selected 1 project:
",
  },
  Object {
    "kind": "O",
    "text": "  stdout only
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Executing a maximum of 1 simultaneous processes...
",
  },
  Object {
    "kind": "O",
    "text": "
[gray]==[[default] [cyan]stdout only[default] [gray]]==================================================[[default] [white]1 of 1[default] [gray]]==[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Build step 1

",
  },
  Object {
    "kind": "O",
    "text": "Error: step 1 failed

",
  },
  Object {
    "kind": "E",
    "text": "[red]\\"stdout only\\" failed to build.[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "[gray]==[[default] [red]FAILURE: 1 project[default] [gray]]=======================================================[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "[gray]--[[default] [red]FAILURE: stdout only[default] [gray]]-----------------------------------[[default] [white]0.10 seconds[default] [gray]]--[default]

",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "E",
    "text": "[red]Projects failed to build.[default]

",
  },
]
`;

exports[`TaskRunner Warning logging Fail on warning Logs warnings correctly 1`] = `"An error occurred."`;

exports[`TaskRunner Warning logging Fail on warning Logs warnings correctly 2`] = `
Array [
  Object {
    "kind": "O",
    "text": "Selected 1 project:
",
  },
  Object {
    "kind": "O",
    "text": "  success with warnings (failure)
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Executing a maximum of 1 simultaneous processes...
",
  },
  Object {
    "kind": "O",
    "text": "
[gray]==[[default] [cyan]success with warnings (failure)[default] [gray]]==============================[[default] [white]1 of 1[default] [gray]]==[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Build step 1

",
  },
  Object {
    "kind": "O",
    "text": "Warning: step 1 succeeded with warnings

",
  },
  Object {
    "kind": "E",
    "text": "[yellow]\\"success with warnings (failure)\\" completed with warnings in 0.10 seconds.[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "[gray]==[[default] [yellow]SUCCESS WITH WARNINGS: 1 project[default] [gray]]=========================================[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "[gray]--[[default] [yellow]WARNING: success with warnings (failure)[default] [gray]]---------------[[default] [white]0.10 seconds[default] [gray]]--[default]

",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "E",
    "text": "[yellow]Projects succeeded with warnings.[default]

",
  },
]
`;

exports[`TaskRunner Warning logging Success on warning Logs warnings correctly 1`] = `
Array [
  Object {
    "kind": "O",
    "text": "Selected 1 project:
",
  },
  Object {
    "kind": "O",
    "text": "  success with warnings (success)
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Executing a maximum of 1 simultaneous processes...
",
  },
  Object {
    "kind": "O",
    "text": "
[gray]==[[default] [cyan]success with warnings (success)[default] [gray]]==============================[[default] [white]1 of 1[default] [gray]]==[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Build step 1

",
  },
  Object {
    "kind": "O",
    "text": "Warning: step 1 succeeded with warnings

",
  },
  Object {
    "kind": "E",
    "text": "[yellow]\\"success with warnings (success)\\" completed with warnings in 0.10 seconds.[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "[gray]==[[default] [yellow]SUCCESS WITH WARNINGS: 1 project[default] [gray]]=========================================[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "[gray]--[[default] [yellow]WARNING: success with warnings (success)[default] [gray]]---------------[[default] [white]0.10 seconds[default] [gray]]--[default]

",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
]
`;
